Fix production API URLs and CORS for deployment